<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.wit.gareth.travelsnap.activities.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailLogin"
        android:layout_marginTop="44dp"
        android:drawableLeft="@drawable/ic_email_grey600_24dp"
        android:hint="@string/email"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/passwordLogin"
        android:layout_alignStart="@+id/passwordLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogin"
        android:layout_marginTop="31dp"
        android:hint="@string/password"
        android:layout_below="@+id/emailLogin"
        android:drawableLeft="@drawable/ic_action_secure"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:onClick="userLogin"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:onClick="userRegister"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:id="@+id/resetPasswordButton"
        android:onClick="resetPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
