<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/liffy"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_height="55dp"
        android:layout_width="250dp"
        android:textSize="20sp"
        android:text="@string/maps"
        android:id="@+id/mapsButton"
        android:onClick="launchMap"
        android:drawableLeft="@drawable/ic_action_map"
        android:layout_marginBottom="40dp"
        android:background="#1F9BDE"
        android:textColor="#ffffffff"
        android:paddingLeft="5dp"

        android:layout_below="@+id/cameraButton"
        android:layout_alignLeft="@+id/cameraButton"
        android:layout_alignStart="@+id/cameraButton" />

    <Button
        android:layout_height="55dp"
        android:layout_width="250dp"
        android:textSize="20sp"
        android:text="@string/action_camera"
        android:paddingLeft="5dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/cameraButton"
        android:onClick="launchCamera"
        android:drawableLeft="@drawable/ic_action_camera"

        android:textColor="#ffffffff"
        android:background="#1F9BDE"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/greeting"
        android:id="@+id/welcomeText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#ffffffff"
        android:textColor="#fffcf9ff" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:background="@drawable/fb_icon"
        android:onClick="launchFacebook"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:background="@drawable/chrome_icon"
        android:onClick="launchWebsite"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_height="55dp"
        android:layout_width="250dp"
        android:textSize="20sp"
        android:text="@string/saved"
        android:id="@+id/galleryButton"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/ic_sd_white_36dp"
        android:textColor="#ffffffff"
        android:background="#1F9BDE"
        android:onClick="launchGallery"
        android:layout_below="@+id/mapsButton"
        android:layout_alignLeft="@+id/mapsButton"
        android:layout_alignStart="@+id/mapsButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/photos_taken"
        android:id="@+id/photos_taken"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

</RelativeLayout>
